--- a/gallery.html
+++ b/gallery.html
@@ -10,15 +10,31 @@
     <div class="container"> <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"> <div class="col-md-3 mb-2 mb-md-0"> <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none"> <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg> </a> </div> <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0"> <li><a href="hello.html" class="nav-link px-2 link-secondary">Home</a></li> <li><a href="experience.html" class="nav-link px-2">Experience</a></li> <li><a href="gallery.html" class="nav-link px-2">Gallery</a></li> <li><a href="contract.html" class="nav-link px-2">Contract</a></li>
     </div>
 
-    <p class="text-center fs-3">Gallery</p>
+    <h2 class="text-center">Gallery</h2>
+    <p class="text-center">This is games I play when I have free time.</p>
     
-    <div class="container-fluid">
-      
-    <div class="col"> <div class="card shadow-sm"> <img src="image/Screenshot 2025-07-01 143310.png" alt=""> </div> </div>
+    <div class="fixing my-5">
+      <div class="card my-3" style="width: 50%">
+        <img class="Explan"src="image/Screenshot 2025-07-01 143310.png" class="card-img-top">
+        <div class="card-body">
+          <p class="text-center">MHW</p>
+        </div>
+      </div>
 
-    <div class="col"> <div class="card shadow-sm"> <img src="image/Screenshot 2025-07-01 143531.png" alt=""> </div> </div>
-  
-   <div class="col"> <div class="card shadow-sm"> <img src="image/Screenshot 2025-07-01 150336.png" alt=""> <div class="card-body"> <p class="card-text">This is games I often play when have a free time.</p> <div class="d-flex justify-content-between align-items-center">  </div> </div> </div> </div>
+      <div class="card my-3" style="width: 50%">
+        <img class="Explan"src="image/Screenshot 2025-07-01 143531.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="text-center">R6</p>
+        </div>
+      </div>
+
+      <div class="card my-3" style="width: 50%">
+        <img class="Explan"src="image/Screenshot 2025-07-01 150336.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="text-center">POE2</p>
+        </div>
+      </div>
+    </div>
 
 </body>
 </html>
