--- a/hello.html
+++ b/hello.html
@@ -9,7 +9,7 @@
     <div class="container"> <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"> <div class="col-md-3 mb-2 mb-md-0"> <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none"> <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg> </a> </div> <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0"> <li><a href="hello.html" class="nav-link px-2 link-secondary">Home</a></li> <li><a href="experience.html" class="nav-link px-2">Experience</a></li> <li><a href="gallery.html" class="nav-link px-2">Gallery</a></li> <li><a href="contract.html" class="nav-link px-2">Contract</a></li>
     </div>
     
-    <div class="d-flex justify-content-center align-items-center mx-auto gap-3 my-5"> <img class="img-pfp rounded-4 "src="image/IMG_1942.JPG" alt=""><use xlink:href="#bootstrap"></use></svg> <div class="align-items-center justify-content-center"><h1 class="text-body-emphasis">Teetad Raseesit</h1> <p class="justify-content-start">Hi, my name is Teetad. I study in Computer Engineering Chiangmai University</div>.</div>
+    <div class="d-flex justify-content-center align-items-center mx-auto gap-3 my-5"> <img style="width: 10em;" class="img-pfp rounded-4"src="image/IMG_1942.JPG" alt=""><use xlink:href="#bootstrap"></use></svg> <div class="align-items-center justify-content-center"><h1 class="text-body-emphasis">Teetad Raseesit</h1> <p class="justify-content-start">Hi, my name is Teetad. I study in Computer Engineering Chiangmai University</div>.</div>
 
       <h1 class="text-center">Skill</h1>
         
