--- a/experience.html
+++ b/experience.html
@@ -11,11 +11,13 @@
 
     <h1 class="text-center my-5"> Experience</h1>
 
-    <div class="fixing  " style="max-width: 1000px">
-    
-
-          <img class="bd-placeholder-img figure-img img-fluid rounded" style="width: 50%; " src="image/image.png" alt="">
-          <p>This is chess game that I done with the group</p>
-           </div>
+      <div class="fixing my-5">
+      <div class="card my-3" style="width: 25rem">
+        <img class="Explan"src="image/image.png" class="card-img-top">
+        <div class="card-body">
+          <p class="text-center">This is chess game that I done with the group</p>
+        </div>
+      </div>
+      </div>
 
   </body>
